--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- AVISO TOPO -->
   <div class="top-alert">
     ⚠️ Atenção lojistas: marcamos para o dia 20 e quinto dia útil apenas para lojistas fixos.
-    Para pedidos extras, o pagamento é realizado na hora.
+    Para extras, o pagamento é realizado na hora.
   </div>
 
   <!-- CABEÇALHO / HERO -->
@@ -85,7 +85,7 @@
 
             <div class="menu-price">
               <span class="price-tag price-tag-highlight">R$ 12,00</span>
-              <span class="price-note">por lanche</span>
+              <span class="price-note">Cada</span>
             </div>
 
             <button class="btn btn-card js-open-whatsapp"
