--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <!-- AVISO TOPO -->
   <div class="top-alert">
-    ⚠️ Atenção lojistas: marcamos para o dia 20 e quinto dia útil apenas para lojistas fixos.
-    Para extras, o pagamento é realizado na hora.
+    ⚠️ Atenção: Lojistas fixo: pagamento no dia 20 e 5º dia útil.
+Lojistas extras: pagamento somente na hora.
   </div>
 
   <!-- CABEÇALHO / HERO -->
@@ -79,13 +79,13 @@
               de oliva.
             </p>
             <ul class="menu-details">
-              <li>Feito na hora, ideal para o intervalo entre atendimentos</li>
+              <li>Feito no dia, ideal para o intervalo entre atendimentos</li>
               <li>Combina demais com Coca-Cola gelada</li>
             </ul>
 
             <div class="menu-price">
               <span class="price-tag price-tag-highlight">R$ 12,00</span>
-              <span class="price-note">Cada</span>
+              <span class="price-note">cada lanche</span>
             </div>
 
             <button class="btn btn-card js-open-whatsapp"
