--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <!-- AVISO TOPO -->
   <div class="top-alert">
-    ⚠️ Atenção: Lojistas fixo: pagamento no dia 20 e 5º dia útil.
-Lojistas extras: pagamento somente na hora.
+     ⚠️ <b>Atenção:</b> Lojistas fixo - pagamento no dia 20 e 5º dia útil.
+Lojistas extras - pagamento somente na hora.
   </div>
 
   <!-- CABEÇALHO / HERO -->
