--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Lojistas extras - pagamento somente na hora.
         <img src="./assets/logo-lojistafood.png" alt="Lojista Food" class="brand-logo" />
         <div class="brand-text">
           <h1>Lojista Food</h1>
-          <p>Cardápio exclusivo para lojistas do shopping 🛍️</p>
+          <p>Cardápio exclusivo para lojistas do Suzano Shopping 🛍️</p>
         </div>
       </div>
 
@@ -110,7 +110,7 @@ Lojistas extras - pagamento somente na hora.
         <!-- COCA -->
         <article class="menu-card drink-card">
           <div class="menu-image-wrapper drink-image-wrapper">
-            <img src="./assets/img-coca-cola.png" alt="Coca-Cola lata 310ml" class="menu-image" />
+            <img src="./assets/coca.png" alt="Coca-Cola lata 310ml" class="menu-image" />
           </div>
           <div class="menu-body">
             <h4>Coca-Cola Lata 310ml</h4>
