--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <!-- AVISO TOPO -->
   <div class="top-alert">
-     ⚠️ <b>Atenção:</b> Lojistas fixo - pagamento no dia 20 e 5º dia útil.
-Lojistas extras - pagamento somente na hora.
+    ⚠️ <b>Atenção:</b> Lojistas fixo – pagamento no dia 20 e 5º dia útil.
+    Lojistas extras – pagamento somente na hora.
   </div>
 
   <!-- CABEÇALHO / HERO -->
@@ -50,26 +50,24 @@ Lojistas extras - pagamento somente na hora.
     </div>
   </header>
 
-  
-
   <!-- CARDÁPIO -->
   <main class="menu">
 
-    <!-- LANCHE PÃO FRANCÊS (ATIVO) -->
+    <!-- LANCHES PÃO FRANCÊS -->
     <section class="menu-section">
       <div class="section-header">
         <div class="section-header-main">
-          <h3>🥪 Lanche no Pão Francês</h3>
+          <h3>🥪 Lanches no Pão Francês</h3>
           <span class="badge-now">Pronto pra pedir</span>
         </div>
-        <p>Lanche caprichado feito no pão francês, perfeito para o intervalo rápido do lojista.</p>
+        <p>Lanches caprichados feitos no pão francês, perfeitos para o intervalo rápido do lojista.</p>
       </div>
 
-      <div class="menu-grid single-grid">
+      <div class="menu-grid">
+        <!-- PÃO FRANCÊS MISTO ESPECIAL -->
         <article class="menu-card menu-card-highlight">
           <div class="menu-tag menu-tag-hit">Favorito do lojista</div>
           <div class="menu-image-wrapper">
-            <!-- TROCAR PELA FOTO REAL, SE QUISER -->
             <img src="./assets/paofrances.png" alt="Lanche no pão francês" class="menu-image" />
           </div>
           <div class="menu-body">
@@ -94,10 +92,37 @@ Lojistas extras - pagamento somente na hora.
             </button>
           </div>
         </article>
+
+        <!-- PÃO FRANCÊS SALAME & QUEIJO -->
+        <article class="menu-card">
+          <div class="menu-tag menu-tag-new">Novo!</div>
+          <div class="menu-image-wrapper">
+            <img src="./assets/salame.png" alt="Pão Francês Salame & Queijo" class="menu-image" />
+          </div>
+          <div class="menu-body">
+            <h4>Pão Francês Salame &amp; Queijo</h4>
+            <p class="menu-desc">
+              Pão francês fresquinho, maionese especial da casa, salame, queijo, alface e um toque de azeite de oliva com
+              ervas finas. Sabor marcante e irresistível.
+            </p>
+            <ul class="menu-details">
+              <li>Feito na hora, fresquinho e bem recheado</li>
+              <li>Combina demais com Coca-Cola bem gelada</li>
+            </ul>
+
+            <div class="menu-price">
+              <span class="price-tag">R$ 15,00</span>
+              <span class="price-note">cada lanche</span>
+            </div>
+
+            <button class="btn btn-card js-open-whatsapp"
+              data-item="Pão Francês Salame & Queijo - pão francês, salame, queijo, maionese especial, alface e azeite de oliva com ervas finas">
+              Pedir esse lanche no WhatsApp
+            </button>
+          </div>
+        </article>
       </div>
     </section>
-
-    
 
     <!-- BEBIDAS -->
     <section class="menu-section">
@@ -213,17 +238,17 @@ Lojistas extras - pagamento somente na hora.
   </main>
 
   <!-- FORMAS DE PAGAMENTO -->
-    <section class="payment-info">
-      <h3>💳 Formas de pagamento</h3>
-      <div class="payment-icons">
-        <div><span>🏦</span> PIX</div>
-        <div><span>💳</span> Débito</div>
-        <div><span>💳</span> Crédito</div>
-      </div>
-      <p class="payment-note">
-        Para lojistas extras, o pagamento é sempre realizado na hora.
-      </p>
-    </section>
+  <section class="payment-info">
+    <h3>💳 Formas de pagamento</h3>
+    <div class="payment-icons">
+      <div><span>🏦</span> PIX</div>
+      <div><span>💳</span> Débito</div>
+      <div><span>💳</span> Crédito</div>
+    </div>
+    <p class="payment-note">
+      Para lojistas extras, o pagamento é sempre realizado na hora.
+    </p>
+  </section>
 
   <!-- RODAPÉ -->
   <footer class="footer">
