--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               ervas finas. Sabor marcante e irresistível.
             </p>
             <ul class="menu-details">
-              <li>Feito na hora, fresquinho e bem recheado</li>
+              <li>Feito no dia, fresquinho e bem recheado</li>
               <li>Combina demais com Coca-Cola bem gelada</li>
             </ul>
 
